# sea-battle

./: .gitignore  CMakeLists.txt  README.md  ascii_logo.txt  client_example.cpp  main.cpp  server_example.cpp
include/: AIPlayer.h  Board.h  HumanPlayer.h  Player.h  Ship.h
resources/: ascii_logo.txt
src/: AIPlayer.cpp  Board.cpp  HumanPlayer.cpp  Ship.cpp  main.cpp  tcp_client.cpp  tcp_server.cpp
